BUGFIX: Safety net $horizontal-rhythm value now matches value in theme.scss. UPDATE: Checkbox now has a configurable size. UPDATE: Radio, Text, and Select configurable sizes are now based on spacing() by default. UPDATE: .form-error now uses an error color by default. UPDATE: Toggl styles refined FEATURE: Added background--multiply utility to backgrounds.scss

--- a/src/FoundryCSS/core/functions/_spacing.scss
+++ b/src/FoundryCSS/core/functions/_spacing.scss
@@ -4,7 +4,7 @@
  * passed as an optional parameter.
  */
 
-$horizontal-rhythm: 16px/4 !default; //Primitive duplicate of theme $horizontal-rhythm variable to prevent compile failure
+$horizontal-rhythm: 0.5rem !default; //Primitive duplicate of theme $horizontal-rhythm variable to prevent compile failure
 
 @function spacing($factor: 1) {
     @return $horizontal-rhythm * $factor;
