--- a/src/FoundryCSS/forms/inputs/Checkbox/_checkbox-config.scss
+++ b/src/FoundryCSS/forms/inputs/Checkbox/_checkbox-config.scss
@@ -1,9 +1,12 @@
 /*
  * Checkbox Config
  *
- * 1. Borders
- * 2. Border Radius
- * 3. Padding
- * 4. Placeholder
+ * 1. Size
+ * 2. Borders
+ * 3. Border Radius
+ * 4. Padding
+ * 5. Placeholder
  *
  */
+
+$form-checkbox-size: spacing(4);
