--- a/src/FoundryCSS/forms/inputs/Checkbox/_checkbox.scss
+++ b/src/FoundryCSS/forms/inputs/Checkbox/_checkbox.scss
@@ -39,8 +39,8 @@
 
     display: block;
     position: relative;
-    height: rhythm(2);
-    width: rhythm(2);
+    height: $form-checkbox-size;
+    width: $form-checkbox-size;
     border: 1px solid color('mid');
     cursor: pointer;
 
