--- a/src/FoundryCSS/forms/inputs/Radio/_radio-config.scss
+++ b/src/FoundryCSS/forms/inputs/Radio/_radio-config.scss
@@ -13,4 +13,4 @@ $form-radio-border-checked: 1px solid color('alpha') !default;
 
 $form-radio-border-radius: 50% !default;
 
-$form-radio-size: rhythm(2) !default;
+$form-radio-size: spacing(4) !default;
