--- a/src/FoundryCSS/forms/inputs/Select/_select-config.scss
+++ b/src/FoundryCSS/forms/inputs/Select/_select-config.scss
@@ -12,8 +12,8 @@ $form-select-border: 1px solid color('mid') !default;
 $form-select-border-focus: 1px solid color('alpha') !default;
 $form-select-border-error: 1px solid color('error') !default;
 
-$form-text-border-radius: 0px !default;
+$form-text-border-radius: 1px !default;
 
-$form-select-padding: rhythm(1.25) !default;
+$form-select-padding: spacing(2) !default;
 
 $form-select-placeholder-color: color('mid') !default;
