--- a/src/FoundryCSS/forms/inputs/Text/_text-config.scss
+++ b/src/FoundryCSS/forms/inputs/Text/_text-config.scss
@@ -14,6 +14,6 @@ $form-text-border-error: 1px solid color('error') !default;
 
 $form-text-border-radius: 1px !default;
 
-$form-text-padding: rhythm(1.25) !default;
+$form-text-padding: spacing(2) !default;
 
 $form-text-placeholder-color: color('mid') !default;
