--- a/src/FoundryCSS/forms/labels/Error/_error.scss
+++ b/src/FoundryCSS/forms/labels/Error/_error.scss
@@ -1,3 +1,4 @@
 .form-error {
     display: block;
+    @extend %color--error !optional;
 }
