--- a/src/FoundryCSS/ui/utilities/_backgrounds.scss
+++ b/src/FoundryCSS/ui/utilities/_backgrounds.scss
@@ -14,3 +14,8 @@
     @extend %background--cover;
     background-attachment: fixed;
 }
+
+%background--multiply,
+.background--multiply {
+    background-blend-mode: multiply;
+}
